--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>uber</title>
 	<link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap&subset=cyrillic" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" href="css/bootstrap-reboot.min.css">
 	<link rel="stylesheet" href="css/bootstrap-grid.min.css">
-	    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+	   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
 	    	integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
    <link rel="stylesheet" href="css/style.min.css">
@@ -19,7 +19,7 @@
 	<header>
 		<nav>
 			<div class="container">
-				<ul class="menu menu_active">
+				<ul class="menu">
 					<li class="menu_item"><a href="#" class="menu_link">Главная </a></li>
 					<li class="menu_item"><a href="#require" class="menu_link">Со своим автомобилем </a></li>
 					<li class="menu_item"><a href="#require" class="menu_link">На автомобиле компании</a></li>
@@ -164,9 +164,8 @@
 							<img src="icons/car.png" alt="car.png">
 						</div>	
 							<div class="reason_descr">
-								<div class="reason_subtitle">Без шашечек и наклеек</div>
-								<div class="reason_text">Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его
-									наклейками.</div>
+								<div class="reason_subtitle">Круглосуточная поддержка</div>
+								<div class="reason_text">В Uber действует круглосуточная поддержка водителей по электронной почте. Если что-то непонятно, Вы всегда можете задать вопрос через On-line консультацию.</div>
 							</div>
 					</div>
 				</div>
@@ -176,11 +175,9 @@
 							<img src="icons/24_7.png" alt="24_7.png">
 						</div>
 							<div class="reason_descr">
-								<div class="reason_subtitle">Круглосуточная поддержка</div>
-								<div class="reason_text">Мы подключаем дистанционно и бесплатно, Вам нет необходимости приезжать к нам! Вы
-									присылаете нам
-									копии документов, мы
-									регистрируем Вас и присылаем данные для подключения, через 1-2 дня Вы можете начинать работать!
+								<div class="reason_subtitle">Без шашечек и наклеек</div>
+								<div class="reason_text"> Вам не нужно менять цвет, устанавливать «шашки» на автомобиль и обклеивать его
+								наклейками.
 								</div>
 							</div>
 					</div>
@@ -188,14 +185,15 @@
 			</div>
 		</div>
 	</section>
-		<section class="mobile">
-			<div class="container">
-				<div class="label">Возможности</div>
-				<div class="title">мобильное приложение убер</div>
+		
+	<section class="mobile">
+		<div class="container">
+			<div class="label">Возможности</div>
+				<h2 class="title">мобильное приложение убер</h2>
 				<div class="subtitle">Сделайте заказ, совершите поездку и оплатите ее стоимость, используя свой мобильный телефон
 				</div>
 
-				<div class="row">
+			<div class="row">
 					<div class="col-md-6 col-lg-4">
 						<div class="mobile_item mobile_item_1">
 							<div class="mobile_item_subtitle">оформление заказа одним касанием</div>
@@ -231,26 +229,26 @@
 							<div class="mobile_item_subtitle">разделить стоимость поездки</div>
 							<div class="mobile_item_plus"></div>
 					</div>
-					</div>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<section class="choice">
-			<div class="container">
-         	<div class="black"></div>
-				<div class="label label_white">Возможности</div>
-			 	<div class="title title_white hidden-320">Выбор - отличная штука!</div>
-				<div class="subtitle subtitle_white hidden-320">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
-				<img src="img/choice_car.png" alt="choice_car" class="choice_img">
-				<div class="choice_descr">Машины на каждый день. <br>
-					Лучше, быстрее и дешевле, чем такси</div>
+	<section class="choice">
+		<div class="container">
+			<div class="black"></div>
+			<div class="label label_white">Возможности</div>
+			<div class="title title_white hidden-320">Выбор - отличная штука!</div>
+			<div class="subtitle subtitle_white hidden-320">Закажите автомобиль, который подходит вам по стилю и бюджету</div>
+			<img src="img/choice_car.png" alt="choice_car" class="choice_img">
+			<div class="choice_descr">Машины на каждый день. <br>
+				Лучше, быстрее и дешевле, чем такси</div>
 
-			</div>
-		</section>
+		</div>
+	</section>
 
-		<section class="require" id=require>
-			<div class="container">
+	<section class="require" id=require>
+		<div class="container">
 				<div class="label">возможности</div>
 				<div class="title">условия и требования</div>
 			<div class="row">	
@@ -258,13 +256,20 @@
 					<div class="require_block">
 						<div class="require_title">УСЛОВИЯ: со своим авто:</div>
 						<ul class="require_list">
-							<li>Подключаем к системе UBER под 10%.</li>
-							<li>Ни каких взносов 0%!</li>
-							<li>Можем подключать удаленно без приезда в офис</li>
-							<li>ИП не требуется</li>
-							<li>Заказы распределяются без учета рейтинга ближайшим водителям</li>
-							<li>Работа только по безналичному расчету</li>
-							<li>Деньги перечисляем на карту водителю или наличными в офисе</li>
+							<li>Подключаем к системе UBER под 10%.
+							</li>
+							<li>Ни каких взносов 0%!
+							</li>
+							<li>Можем подключать удаленно без приезда в офис
+							</li>
+							<li>ИП не требуется
+							</li>
+							<li>Заказы распределяются без учета рейтинга ближайшим водителям
+							</li>
+							<li>Работа только по безналичному расчету
+							</li>
+							<li>Деньги перечисляем на карту водителю или наличными в офисе
+							</li>
 						</ul>
 						<div class="require_descr">В день заработок составляет 7000-12000р + бонус 3000т рублей</div>
 					</div>
@@ -307,56 +312,59 @@
 					</div>
 				</div>
 			</div>
-			</div>
-		</section>
+		</div>
+	</section>
 
-		<section class="world">
-			<div class="container">
-				<div class="label label_white label_min">города</div>
-				<div class="title title_white">По всему миру</div>
-				<div class="subtitle subtitle_white">Мы в вашем городе и по всему миру</div>
-				<a href="#" class="world_link">посмотреть все города</a>
-			</div>
-		</section>
+	<section class="world">
+		<div class="container">
+			<div class="label label_white label_min">города</div>
+			<h2 class="title title_white">По всему миру</h2>
+			<div class="subtitle subtitle_white">Мы в вашем городе и по всему миру</div>
 
-		<footer>
-			<div class="footer_divider"></div>
-			<div class="footer_wrapper">
-					<div>
-						<div class="footer_social">
-							<a href="#" class="footer_social_item"><i class="fab fa-facebook-f"></i></a>
-							<a href="#" class="footer_social_item"><i class="fab fa-twitter"></i></a>
-							<a href="#" class="footer_social_item"><i class="fab fa-linkedin"></i></a>
-							<a href="#" class="footer_social_item"><i class="fab fa-instagram"></i></a>
-						</div>
-					</div>
-					<div>
-						<div class="footer_links">
-							<div class="footer_links_main">
-								<a href="#">на главную</a>
-								<a href="#">города</a>
-								<a href="#">для водителей</a>
-							</div>
-							<div class="footer_links_sub">
-								<a href="#">центр поддержки</a>
-								<a href="#">вакансии</a>
-								<a href="#">разработчики</a>
-								<a href="#">блог</a>
-								<a href="#">о нас</a>
-							</div>
-							<a href="#" class="footer_links_lang">русский</a>
-						</div>
-					</div>
-					<div>
-						<div class="footer_mobile">
-							<a href="#"><img src="icons/links.png" alt="App store"></a>
-							<!-- <a href="#"><img src="icons/google.png" alt="Google play" class="google"></a>
-							<a href="#"><img src="icons/windows.png" alt="Windows store"></a>-->
-						</div> 
-					</div>
+			<a href="#" class="world_link">посмотреть все города</a>
 			</div>
-		</footer>
+	</section>
 
-<script src="js/script.js"></script>
-</body>
+	<footer>
+		<div class="footer_divider"></div>
+		<div class="footer_wrapper">
+			<div>
+				<div class="footer_social">
+					<a href="#" class="footer_social_item"><i class="fab fa-facebook-f"></i></a>
+					<a href="#" class="footer_social_item"><i class="fab fa-twitter"></i></a>
+					<a href="#" class="footer_social_item"><i class="fab fa-linkedin"></i></a>
+					<a href="#" class="footer_social_item"><i class="fab fa-instagram"></i></a>
+				</div>
+			</div>
+			<div>
+				<div class="footer_links">
+					<div class="footer_links_main">
+						<a href="#">на главную</a>
+						<a href="#">города</a>
+						<a href="#">для водителей</a>
+					</div>
+					<div class="footer_links_sub">
+						<a href="#">центр поддержки</a>
+						<a href="#">вакансии</a>
+						<a href="#">разработчики</a>
+						<a href="#">блог</a>
+						<a href="#">о нас</a>
+					</div>
+					<a href="#" class="footer_links_lang">русский</a>
+				</div>
+			</div>
+			<div>
+				<div class="footer_mobile">
+					<a href="#"><img src="img/app_store.png" alt="App store"></a>
+					<a href="http://play.google.com/store/apps/details?id=<package_name>"><img src="img/google_play.png"
+							alt="Google play" class="google"></a>
+					<a href="#"><img src="img/windows_store.png" alt="Windows store"></a>
+				</div> 
+			</div>
+		</div>
+	</footer>
+
+ 	<script src="js/script.js"></script>
+</body> 
+
 </html>
